--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "com.google.android.material:material:1.6.0-alpha01"
+
 
 
 }
